# abc-scaffold

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  start.sh
.github/workflows/: release.yml
hooks/: pre-push
src/: main.rs
tests/: cli.rs  scaffold.rs
