[package]
name = "my-project"
version = "0.1.0"
edition = "2021"
description = "TODO: describe your project"
license = "MIT"

[[bin]]
name = "my-project"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
