[package]
name = "abc-init"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI wizard to scaffold abc-scaffold projects"
license = "MIT"

[[bin]]
name = "abc-init"
path = "src/main.rs"

[dependencies]
ratatui    = "0.29"
crossterm  = "0.28"
clap       = { version = "4", features = ["derive"] }
